# dcc-dev-sim

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/devices/: comm_hub.rs  dcare.rs  mod.rs  web_gui.rs
src/devices/comm_hub/: comm_hub_device.rs
src/devices/dcare/: dcare_device.rs  web_data.rs  web_login.rs
src/devices/utils/: mod.rs  web_data.rs  web_login.rs
src/devices/web_gui/: web_browser.rs
