[package]
name    = "dcc-dev-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash      = "0.8.12"
anyhow     = "1.0.98"
chrono     = "0.4.41"
clap       = { version = "4.5.38", features = ["derive"] }
const-str  = "0.6.2"
itertools  = "0.14.0"
md5        = "0.7.0"
once_cell  = "1.21.3"
rand       = "0.9.1"
reqwest    = "0.12.15"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol_str   = { version = "0.3.2", features = ["serde"] }
tokio      = { version = "1.45.1", features = ["full"] }
uuid       = "1.17.0"
