[package]
name    = "dcc-dev-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash          = "0.8.12"
anyhow         = "1.0.98"
chrono         = { version = "0.4.41", features = ["serde"] }
clap           = { version = "4.5.38", features = ["derive"] }
const-str      = "0.6.2"
itertools      = "0.14.0"
md5            = "0.7.0"
once_cell      = "1.21.3"
rand           = "0.9.1"
reqwest        = "0.12.15"
serde          = { version = "1.0.219", features = ["derive"] }
serde_json     = "1.0.140"
smol_str       = { version = "0.3.2", features = ["serde"] }
tokio          = { version = "1.45.1", features = ["full"] }
tokio-util     = { version = "0.7.15", features = ["compat"] }
uuid           = "1.17.0"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hyper          = "1.6.0"
http-body-util = { version = "0.1.0" }
hyper-util     = { version = "0.1.0", features = ["tokio"] }
bytes          = "1.4.0"
tokio-rustls   = "0.24.0"
webpki-roots   = "1.0.1"
